--- a/GoPark2020/Views/ReserveSpot/Index.cshtml
+++ b/GoPark2020/Views/ReserveSpot/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<GoPark.Models.Discount>
+﻿@*@model IEnumerable<GoPark2020.Models.Discount>
 
     
 
@@ -13,5 +13,7 @@
 {
     <h1>Hello there</h1>
     <h1>@dis.DiscountName</h1>
-}
+}*@
+
+
 
