--- a/GoPark2020/Views/ReserveSpot/ConfirmAccount.cshtml
+++ b/GoPark2020/Views/ReserveSpot/ConfirmAccount.cshtml
@@ -6,7 +6,7 @@
     <script type="text/javascript">
 
         $("#ReserveSpot").click(function () {
-            window.location.href = '@Url.Action("Index", "ReserveSpot" )';
+            window.location.href = '@Url.Action("ReserveSpot", "ReserveSpot" )';
          });
 
     </script>
