--- a/GoPark2020/Views/ReserveSpot/SignUp.cshtml
+++ b/GoPark2020/Views/ReserveSpot/SignUp.cshtml
@@ -1,31 +1,154 @@
-﻿
+﻿@section Styles {
+    <link rel="Stylesheet" href="@Href("~/Content/SignUp.css")" />
+}
 @{
-    ViewBag.Title = "SignUp";
+    ViewBag.Title = "LogIn";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@Scripts.Render("~/bundles/SignUp")
 @section Scripts{
-    <script type="text/javascript">
-
-        $("#SaveUserDetails").click(function () {
-            window.location.href = '@Url.Action("ConfirmAccount", "ReserveSpot" )';
-         });
-
-    </script>
+    <script src="~/Scripts/SignUp.js"></script>
 }
+<form action="#" name="myForm" method="post" onsubmit="return(validate());">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="well center-block">
+                <div class="well-header">
+                    <h3 class="text-center text-success"> Register Here! </h3>
+                    <hr>
+                </div>
 
-<h2>SignUp</h2>
+                <div class="row">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <div class="form-group">
+                            <div class="input-group">
+                                <div class="input-group-addon">
+                                    <i class="glyphicon glyphicon-user"></i>
+                                </div>
+                                <input type="text" placeholder="First Name" name="txtfname" class="form-control">
 
-<h1> Create my account</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-<h2>name</h2>
-<input />
-<h2>passport number</h2>
-<input />
-<h2>cell phone number</h2>
-<input />
-<h2>house number</h2>
-<input />
-<h4>Are you handicaped?</h4>
-<input type="checkbox" />
+                <div class="row">
+                    <div class="col-xs-12 col-sm-12 col-md-12">
+                        <div class="form-group">
+                            <div class="input-group">
+                                <div class="input-group-addon">
+                                    <i class="glyphicon glyphicon-user"></i>
+                                </div>
+                                <input type="text" placeholder="Last Name" name="txtlname" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-<button id="SaveUserDetails" style="display:block"> Save </button>
+                <div class="row">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <div class="form-group">
+                            <div class="input-group">
+                                <div class="input-group-addon">
+                                    <i class="glyphicon glyphicon-lock"></i>
+                                </div>
+                                <input type="password" minlength="8" maxlength="20" placeholder="Password" name="txtpass" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12 col-xs-12 col-sm-12">
+                        <div class="form-group">
+                            <div class="input-group">
+                                <div class="input-group-addon">
+                                    <i class="glyphicon glyphicon-phone"></i>
+                                </div>
+                                <input type="number" minlength="10" maxlength="12" class="form-control" name="txtmobile" placeholder="Mobile No.">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12 col-xs-12 col-sm-12">
+                        <div class="form-group">
+                            <div class="input-group">
+                                <div class="input-group-addon">
+                                    <i class="glyphicon glyphicon-envelope"></i>
+                                </div>
+                                <input type="email" class="form-control" name="txtmail" placeholder="E-Mail">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12 col-xs-12 col-sm-12">
+                        <div class="form-group">
+                            <div class="input-group">
+                                <div class="input-group-addon">
+                                    <i class="glyphicon glyphicon-list-alt"></i>
+                                </div>
+                                <textarea class="form-control" name="txtadd" placeholder="Address"></textarea>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12 col-xs-12 col-sm-12">
+                        <div class="form-group">
+                            <div class="input-group">
+                                <div class="input-group-addon">
+                                    <i class="glyphicon glyphicon-calendar"></i>
+                                </div>
+                                <input type="text" name="dob" placeholder="Date Of Birth" class="form-control" id="datepicker">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row widget">
+                    <div class="col-md-12 col-xs-12 col-sm-12">
+                        <button class="btn btn-warning btn-block"> Submit </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+</form>
+
+@*@{
+        ViewBag.Title = "SignUp";
+        Layout = "~/Views/Shared/_Layout.cshtml";
+    }
+    @section Scripts{
+        <script type="text/javascript">
+
+            $("#SaveUserDetails").click(function () {
+                window.location.href = '@Url.Action("ConfirmAccount", "ReserveSpot" )';
+             });
+
+        </script>
+    }
+
+    <h2>SignUp</h2>
+
+    <h1> Create my account</h1>
+
+    <h2>name</h2>
+    <input />
+    <h2>passport number</h2>
+    <input />
+    <h2>cell phone number</h2>
+    <input />
+    <h2>house number</h2>
+    <input />
+    <h4>Are you handicaped?</h4>
+    <input type="checkbox" />
+
+    <button id="SaveUserDetails" style="display:block"> Save </button>*@
