--- a/GoPark2020/Views/ReserveSpot/ReserveSpot.cshtml
+++ b/GoPark2020/Views/ReserveSpot/ReserveSpot.cshtml
@@ -1,32 +1,239 @@
 ﻿
-@{
-    ViewBag.Title = "ReserveSpot";
-}
 @section Scripts{
     <script type="text/javascript">
-
-
-
     $(".ConfirmSpot").click(function () {
             window.location.href = '@Url.Action("ConfirmSpot", "ReserveSpot" )';
+    });
+        $(".skipchoiceofspot").click(function () {
+            window.location.href = '@Url.Action("skipchoiceofspot", "ReserveSpot" )';
          });
-
     </script>
 }
 
-<h2>ReserveSpot</h2>
-<div class="container-fluid">
-    <div class="row">
-        <div class="col">
-            <div id="ParkingLot" style="background-color:aqua">
-                <h1>Our parking Lot</h1>
-            </div>
-        </div>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<style>
+
+    .ConfirmSpot {
+        background-color: #4CAF50;
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+    }
+        .ConfirmSpot:hover {
+            color: forestgreen;
+        }
+    h1 {
+        color: #ff4411;
+        font-size: 48px;
+        font-family: 'Signika', sans-serif;
+        padding-bottom: 10px;
+        margin-top: 20px;
+    }
+
+    .skipchoiceofspot:hover {
+        color: blue;
+        text-decoration: underline;
+        cursor: pointer;
+    }
+
+    .skipchoiceofspot {
+        color: green;
+    }
+    
+    #table tr:nth-child(even)
+    {
+        background-color: #f2f2f2;
+    }
+    #table td:hover {
+        background-color: #ddd;
+    }
+    #table td{
+        cursor:pointer;
+
+    }
+
+</style>
+
+
+<body>
+
+    <h1> Choose My Spot</h1>
+
+
+    <p class="skipchoiceofspot"> skip this step and get the first available spot-> </p>
+
+    <div class="container">
+        <table id="table" class="table table-bordered">
+
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </table>
     </div>
-</div>
-@*this butoon is getting a default spot*@
-<button class="ConfirmSpot btn btn-primary btn-lg">Get the first available spot  &raquo;</button>
 
-<button class="ConfirmSpot btn btn-primary btn-lg">Confirm spot &raquo;</button>
+    <button class="ConfirmSpot"> confirm my spot </button>
 
-
+</body>
