Connected to data base.
connected GoPark2020 to the data base -  now its able to update and read data from the db

--- a/GoPark2020/Views/Home/Index.cshtml
+++ b/GoPark2020/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
         });
 
         $("#SignUp").click(function () {
-            window.location.href = '@Url.Action("SignUp", "ReserveSpot" )';
+            window.location.href = '@Url.Action("Create", "Users" )';
          });
 
     </script>
