--- a/GoPark2020/Views/ReserveSpot/SignIn.cshtml
+++ b/GoPark2020/Views/ReserveSpot/SignIn.cshtml
@@ -7,7 +7,7 @@
 }
 @section Scripts{
     <script type="text/javascript">
-        $("#ReserveSpot").click(function () {
+        $("#ReserveSpot").submit(function () {
             window.location.href = '@Url.Action("ReserveSpot", "ReserveSpot" )';
         });
 
