--- a/GoPark2020/Views/Home/Index.cshtml
+++ b/GoPark2020/Views/Home/Index.cshtml
@@ -4,6 +4,18 @@
 
 }
 
+@section Styles{
+    <style>
+        body {
+            background-image: url('/Content/Images/cars-parkinglot.jpg');
+/*            background-size:100%;
+*/        }
+
+    </style>
+
+
+}
+
 @section Scripts{
     <script type="text/javascript">
 
@@ -23,7 +35,9 @@
 <div class="welcome">
     <h1>Welcome to our parking lot!</h1>
     <p class="lead">We have 50 empty spots!</p>
-    <button id="LogIn" class=" btn btn-primary btn-lg">Log in and then reserve a spot &raquo;</button>
+    <button id="LogIn" class=" btn btn-primary btn-lg">
+        Log in and then reserve a spot &raquo;
+    </button>
     <button id="SignUp" class=" btn btn-primary btn-lg">Sign up &raquo;</button>
 
 </div>
