--- a/GoPark2020/Views/ReserveSpot/ConfirmSpot.cshtml
+++ b/GoPark2020/Views/ReserveSpot/ConfirmSpot.cshtml
@@ -21,5 +21,5 @@
 <h3>Your spot is::<br /> row 2 lot 12</h3>
 
 <button id="Back">Back </button>
-<button id="Finish" style="display:block"> Finish </button>
+<button id="Finish" style="display:block"> Finish </button>*@
 
