--- a/GoPark2020/Views/Shared/_Layout.cshtml
+++ b/GoPark2020/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
         }
     </script>
 </head>
-<body>
+<body  @RenderSection("BodyAttributes", false)>
     <div class="navbar navbar-dark bg-primary fixed-top navbar-expand-sm">
         <div class="container">
             <div class="navbar-header">
@@ -57,8 +57,8 @@
             <!--</div>-->
         </div>
         </div>
-    </div>
-    <div class="container body-content">
+    
+    <div class="body-content">
         @RenderBody()
         <hr />
         <footer>
